--- a/app/src/main/res/layout/item_event_list.xml
+++ b/app/src/main/res/layout/item_event_list.xml
@@ -1,33 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content">
+             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+             android:layout_height="wrap_content" android:id="@+id/frameLayout">
 
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content" app:cardElevation="4dp" app:contentPadding="16dp"
-            app:cardCornerRadius="4dp" app:cardUseCompatPadding="true">
+            app:cardCornerRadius="4dp" app:cardUseCompatPadding="true" android:id="@+id/cardView">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/event_title"
-                    android:text="Event Title"
-                    android:layout_width="wrap_content"
+                    android:text="@string/event_title_text"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="24dp" app:layout_constraintEnd_toStartOf="@+id/event_image"/>
             <TextView
                     android:id="@+id/event_location"
-                    android:text="Event Location"
-                    android:layout_width="wrap_content"
+                    android:text="@string/event_location_text"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@+id/event_title" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                    android:textSize="18sp" android:textStyle="bold"
+                    android:layout_marginEnd="24dp" app:layout_constraintEnd_toStartOf="@+id/event_image"/>
+            <TextView
+                    android:id="@+id/event_description"
+                    android:text="@string/event_description_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="18sp"
+                    android:maxLines="2"
+                    android:ellipsize="end"
+                    android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/event_location"/>
+            <Button
+                    android:id="@+id/share"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:text="@string/share_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textSize="18sp"
+                    app:layout_constraintTop_toBottomOf="@+id/event_description"
+                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>
+            <ImageView
+                    android:id="@+id/event_image"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    tools:src="@mipmap/ic_launcher"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/event_location"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/event_image_description"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </FrameLayout>
