--- a/app/src/main/res/layout/item_event_list.xml
+++ b/app/src/main/res/layout/item_event_list.xml
@@ -61,7 +61,8 @@
                     android:id="@+id/event_image"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
-                    tools:src="@mipmap/ic_launcher"
+                    tools:src="@drawable/placeholder_nomoon"
+                    android:scaleType="centerCrop"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="12dp"
                     app:layout_constraintBottom_toBottomOf="@+id/event_location"
