--- a/app/src/main/res/layout/item_event_list.xml
+++ b/app/src/main/res/layout/item_event_list.xml
@@ -6,45 +6,75 @@
 
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" app:cardElevation="4dp" app:contentPadding="16dp"
-            app:cardCornerRadius="4dp" app:cardUseCompatPadding="true" android:id="@+id/cardView">
+            android:layout_height="wrap_content"
+            app:cardElevation="4dp"
+            app:contentPadding="12dp"
+            app:cardCornerRadius="4dp"
+            app:cardUseCompatPadding="true"
+            android:id="@+id/cardView">
+
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+            <ImageView
+                    android:id="@+id/event_image"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    tools:src="@drawable/placeholder_nomoon"
+                    android:scaleType="centerCrop"
+                    android:padding="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginBottom="12dp"
+                    android:contentDescription="@string/event_image_description"
+                    app:layout_constraintBottom_toTopOf="@+id/event_description"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed"/>
 
             <TextView
                     android:id="@+id/event_title"
                     android:text="@string/event_title_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:textSize="22sp"
+                    android:textSize="24sp"
                     android:textStyle="bold"
-                    android:layout_marginEnd="24dp" app:layout_constraintEnd_toStartOf="@+id/event_image"/>
+                    app:layout_constraintEnd_toStartOf="@+id/event_image"
+                    app:layout_constraintTop_toTopOf="parent"
+            />
+
             <TextView
                     android:id="@+id/event_location"
                     android:text="@string/event_location_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/event_title" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    android:textSize="18sp" android:textStyle="bold"
-                    android:layout_marginEnd="24dp" app:layout_constraintEnd_toStartOf="@+id/event_image"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="12dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="12dp"
+                    app:layout_constraintEnd_toStartOf="@+id/event_image"
+                    app:layout_constraintTop_toBottomOf="@id/event_title"
+            />
             <TextView
                     android:id="@+id/event_description"
                     android:text="@string/event_description_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="12dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:maxLines="2"
                     android:ellipsize="end"
-                    android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/event_location"/>
+                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/share"/>
+
             <Button
                     android:id="@+id/share"
                     style="@style/Widget.AppCompat.Button.Borderless"
@@ -53,21 +83,11 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     android:textSize="18sp"
-                    app:layout_constraintTop_toBottomOf="@+id/event_description"
-                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>
-            <ImageView
-                    android:id="@+id/event_image"
-                    android:layout_width="72dp"
-                    android:layout_height="72dp"
-                    tools:src="@drawable/placeholder_nomoon"
-                    android:scaleType="centerCrop"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="12dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/event_location"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="@string/event_image_description"/>
+                    android:layout_marginBottom="8dp"
+                    android:textColor="@android:color/tertiary_text_dark"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </FrameLayout>
