--- a/app/src/main/res/layout/item_event_list.xml
+++ b/app/src/main/res/layout/item_event_list.xml
@@ -60,7 +60,7 @@
                     android:layout_marginEnd="12dp"
                     app:layout_constraintEnd_toStartOf="@+id/event_image"
                     app:layout_constraintTop_toBottomOf="@id/event_title"
-            />
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/event_description"/>
             <TextView
                     android:id="@+id/event_description"
                     android:text="@string/event_description_text"
