Added Date object to Event class. Added event date TextView to EventDetailActivity. Replaced Picasso library usage with Glide library usage. Added code to round the fetched image and placeholder image.

--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -21,6 +21,16 @@
                 android:contentDescription="@string/event_image_description"
                 android:adjustViewBounds="true"/>
         <TextView
+                android:id="@+id/detail_event_date"
+                android:text="@string/detail_event_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginTop="8dp"
+                android:textSize="14sp"/>
+
+        <TextView
                 android:id="@+id/detail_event_title"
                 android:text="@string/event_title_text"
                 android:layout_width="match_parent"
