Added toast message to EventRecyler adapter when tapping Share button on an event.  Added Dialer Intent to EventDetailActivity when clicking call image in toolbar.

--- a/app/src/main/res/layout-land/item_event_list.xml
+++ b/app/src/main/res/layout-land/item_event_list.xml
@@ -73,10 +73,10 @@
                     android:maxLines="2"
                     android:ellipsize="end"
                     app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/share"/>
+                    app:layout_constraintBottom_toTopOf="@+id/share_button"/>
 
             <Button
-                    android:id="@+id/share"
+                    android:id="@+id/share_button"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:text="@string/share_text"
                     android:layout_width="wrap_content"
