--- a/app/src/main/res/layout/item_event_list.xml
+++ b/app/src/main/res/layout/item_event_list.xml
@@ -15,7 +15,8 @@
 
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:id="@+id/event_info">
 
             <ImageView
                     android:id="@+id/event_image"
@@ -73,10 +74,10 @@
                     android:maxLines="2"
                     android:ellipsize="end"
                     app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/share"/>
+                    app:layout_constraintBottom_toTopOf="@+id/share_button"/>
 
             <Button
-                    android:id="@+id/share"
+                    android:id="@+id/share_button"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:text="@string/share_text"
                     android:layout_width="wrap_content"
@@ -86,7 +87,8 @@
                     android:textSize="18sp"
                     android:layout_marginBottom="8dp"
                     android:textColor="@android:color/tertiary_text_dark"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
