--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,7 +20,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" tools:listitem="@layout/item_event_list">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/item_event_list">
 
     </android.support.v7.widget.RecyclerView>
 
