--- a/app/src/main/res/layout-sw600dp/activity_event_detail.xml
+++ b/app/src/main/res/layout-sw600dp/activity_event_detail.xml
@@ -26,7 +26,7 @@
             <ImageView
                     android:id="@+id/detail_event_image"
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
+                    android:layout_height="@dimen/tablet_image_view_height"
                     tools:src="@drawable/placeholder_nomoon"
                     android:scaleType="centerCrop"
                     app:layout_constraintEnd_toEndOf="parent"
