--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 android:fitsSystemWindows="true"
-                                                 tools:context=".ui.activities.EventDetailActivity"
-                                                 tools:ignore="MergeRootFrame">
+<android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:context=".ui.activities.EventDetailActivity"
+        tools:ignore="MergeRootFrame">
 
     <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar"
@@ -66,30 +67,31 @@
                     android:text="@string/detail_event_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginTop="8dp"
-                    android:textSize="14sp"/>
+                    android:layout_marginStart="@dimen/mobile_detail_vertical_margin"
+                    android:layout_marginEnd="@dimen/mobile_detail_vertical_margin"
+                    android:layout_marginTop="16dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                    android:textColor="@color/textColor"/>
 
             <TextView
                     android:id="@+id/detail_event_title"
                     android:text="@string/event_title_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
+                    android:layout_marginStart="@dimen/mobile_detail_vertical_margin"
+                    android:layout_marginEnd="@dimen/mobile_detail_vertical_margin"
                     android:layout_marginTop="8dp"
-                    android:textSize="24sp"
-                    android:textStyle="bold"/>
+                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                    android:textColor="@color/textColor"/>
             <TextView
                     android:id="@+id/detail_event_description"
                     android:text="@string/event_description_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:textSize="20sp"
-                    android:layout_marginBottom="8dp"/>
+                    android:layout_marginStart="@dimen/mobile_detail_vertical_margin"
+                    android:layout_marginEnd="@dimen/mobile_detail_vertical_margin"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/textColor"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
