--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
 <resources>
     <dimen name="mobile_image_view_height">200dp</dimen>
     <dimen name="tablet_image_view_height">400dp</dimen>
+    <dimen name="mobile_recyclerview_vertical_margin">8dp</dimen>
+    <dimen name="mobile_recyclerview_horizontal_margin">8dp</dimen>
+    <dimen name="tablet_recyclerview_vertical_margin">48dp</dimen>
+    <dimen name="tablet_recyclerview_horizontal_margin">16dp</dimen>
+    <dimen name="mobile_detail_vertical_margin">16dp</dimen>
+    <dimen name="tablet_detail_vertical_margin">48dp</dimen>
 </resources>
