Renamed com.glopez.phunapp.data to com.glopez.phunapp.model. Renamed com.glopez.phunapp.ui to com.glopez.phunapp.view. Created ViewModelFactory. Removed EventViewModel dependencies.

--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -13,14 +13,14 @@
             android:id="@+id/feed_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="@dimen/tablet_recyclerview_horizontal_margin"
-            android:layout_marginStart="@dimen/tablet_recyclerview_vertical_margin"
-            android:layout_marginEnd="@dimen/tablet_recyclerview_vertical_margin"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_event_list">
+            app:layout_constraintTop_toTopOf="parent" tools:listitem="@layout/item_event_list">
 
     </android.support.v7.widget.RecyclerView>
 
