--- a/app/src/main/res/layout-sw600dp/activity_event_detail.xml
+++ b/app/src/main/res/layout-sw600dp/activity_event_detail.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".ui.activities.EventDetailActivity"
+        tools:context=".view.activities.EventDetailActivity"
         tools:ignore="MergeRootFrame">
 
     <android.support.design.widget.AppBarLayout
@@ -49,12 +49,9 @@
 
 
     <android.support.v4.widget.NestedScrollView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.activities.EventDetailActivity"
+            tools:context=".view.activities.EventDetailActivity"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
