--- a/app/src/main/res/layout-sw600dp/content_main.xml
+++ b/app/src/main/res/layout-sw600dp/content_main.xml
@@ -24,4 +24,17 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progress_bar"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                style="@android:style/Widget.ProgressBar"
+        />
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
