--- a/app/src/main/res/layout-sw600dp/activity_event_detail.xml
+++ b/app/src/main/res/layout-sw600dp/activity_event_detail.xml
@@ -49,6 +49,7 @@
 
 
     <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nested_scroll_view_group"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.activities.EventDetailActivity"
