--- a/app/src/main/res/layout-sw600dp/content_main.xml
+++ b/app/src/main/res/layout-sw600dp/content_main.xml
@@ -30,7 +30,7 @@
         <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/progress_bar"
+                android:id="@+id/activity_progress_bar"
                 android:layout_centerInParent="true"
                 android:visibility="gone"
                 style="@android:style/Widget.ProgressBar"
