--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".view.activities.MainActivity"
-        tools:showIn="@layout/activity_main">
+        android:id="@+id/feed_fragment"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/feed_list"
+            android:id="@+id/feed_fragment_recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/mobile_recyclerview_vertical_margin"
@@ -20,10 +19,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_event_list" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="1.0">
-
-    </android.support.v7.widget.RecyclerView>
+            tools:listitem="@layout/item_event_list"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="1.0"/>
 
     <RelativeLayout
             android:layout_width="match_parent"
@@ -31,11 +29,10 @@
         <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/activity_progress_bar"
+                android:id="@+id/fragment_progress_bar"
                 android:layout_centerInParent="true"
                 android:visibility="gone"
                 style="@android:style/Widget.ProgressBar"
                 />
     </RelativeLayout>
-
 </android.support.constraint.ConstraintLayout>
