--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,23 @@
         tools:context=".view.activities.MainActivity">
 
 
-    <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-    </android.support.design.widget.AppBarLayout>
+
+<!--    <android.support.design.widget.AppBarLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:theme="@style/AppTheme.AppBarOverlay">-->
+<!--    </android.support.design.widget.AppBarLayout>-->
 
 <!--    <include layout="@layout/content_main"/>-->
 
-    <fragment
-            android:id="@+id/eventListFragment"
-            android:name="com.glopez.phunapp.view.feed.FeedFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+<!--    <android.support.constraint.ConstraintLayout-->
+<!--            android:id="@+id/constraint_layout"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent" />-->
 
+    <!--    <fragment-->
+<!--            android:id="@+id/eventListFragment"-->
+<!--            android:name="com.glopez.phunapp.view.feed.FeedFragment"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"/>-->
 </android.support.design.widget.CoordinatorLayout>
