--- a/app/src/main/res/layout/item_event_list.xml
+++ b/app/src/main/res/layout/item_event_list.xml
@@ -24,15 +24,17 @@
                     android:id="@+id/event_image"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
-                    tools:src="@drawable/placeholder_nomoon"
-                    android:scaleType="centerCrop"
-                    android:padding="4dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="@dimen/item_event_list_image_view_margin_top"
+                    android:layout_marginEnd="@dimen/item_event_list_image_view_margin_end_start"
+                    android:layout_marginBottom="@dimen/item_event_list_image_view_margin_bottom"
                     android:contentDescription="@string/event_image_description"
+                    android:padding="4dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@+id/event_description"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_chainStyle="packed"/>
+                    app:layout_constraintVertical_chainStyle="packed"
+                    tools:src="@drawable/placeholder_nomoon" />
 
             <TextView
                     android:id="@+id/event_title"
@@ -41,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/item_event_list_event_title_margin_top"
                     app:layout_constraintStart_toStartOf="parent"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="@color/textColor"
@@ -55,12 +57,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="16dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:textColor="@color/textColor"
-                    android:layout_marginEnd="16dp"
                     app:layout_constraintEnd_toStartOf="@+id/event_image"
                     app:layout_constraintTop_toBottomOf="@id/event_title"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                    android:textColor="@color/textColor"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toTopOf="@+id/event_description"/>
 
@@ -70,15 +72,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/textColor"
+                    android:minLines="@integer/item_event_list_event_description_min_lines"
                     android:maxLines="2"
                     android:ellipsize="end"
                     app:layout_constraintHorizontal_bias="0.0"
-                    android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toTopOf="@+id/share_button"/>
 
             <Button
