--- a/app/src/main/res/values-sw600dp-land/integers.xml
+++ b/app/src/main/res/values-sw600dp-land/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="num_grid_columns">2</integer>
+    <integer name="item_event_list_event_description_min_lines">2</integer>
 </resources>
